# opencrags-rest-api

./: .dockerignore  .gitignore  Dockerfile  README.md  auth0.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  test.yml
app/: __init__.py  auth.py  config.py  create_api.py  create_api_router.py  geo_point.py  main.py  mongo.py
app/items/: ascent.py  climb.py  crag.py  grade.py  grade_vote.py  image.py  line.py  rating.py  sector.py
app/routers/: approach.py  approaches.py  ascents.py  banners.py  beta_videos.py  climbs.py  comments.py  crag_photos.py  crags.py  external_topo_links.py  grade_votes.py  grades.py  images.py  lines.py  login.py  parking.py  parkings.py  quick_search.py  ratings.py  search_climbs.py  sectors.py  users.py
tests/: test_api.py  test_ascents.py  test_comments.py
