[tool.poetry]
name = "opencrags-rest-api"
version = "0.0.0"
description = ""
authors = ["Richard Löwenström"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.1"
uvicorn = "^0.13.4"
requests = "^2.25.1"
Pillow = "^8.2.0"
fastapi-auth0 = "^0.2.1"
pymongo = "^3.11.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
ipykernel = "^6.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
